--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,41 @@
 
+- [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.02
+
+如果需要删除 git 的所有历史记录, 可以执行:
+
+```bash
+#1. 切换到新的分支, 注意 --orphan 参数.
+git checkout --orphan latest_branch
+
+#2. 暂存所有文件.
+git add .
+
+#3. 提交.
+git commit -m "1"
+
+#4. 删除 master 分支.
+git branch -D master
+
+#5. 将新分支命名为 master.
+git branch -m master
+
+#6. 推送到远程master分支, 注意 -f 参数.
+git push -f origin master
+
+```
+
+之后, 可以执行以下命令, 删掉本地的历史记录(通过`git log`可以看到):
+
+```
+git reflog expire --expire=now --all
+git gc --prune=now
+git gc --aggressive --prune=now
+```
 
 ---
 
