--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,4 +1,5 @@
 
+
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
@@ -7,6 +8,40 @@
 
 ## 2019.06.03
 
+git 遇到问题: fatal: refusing to merge unrelated histories 的解决方案
+
+```
+添加 --allow-unrelated-histories
+git merge master --allow-unrelated-histories
+```
+
+Linux 的两条命令之间通过分号(;)连接.
+
+Windows 的两条命令之间通过 & 连接.
+
+<br/>
+
+Visual Studio 2015, 在 Project Properties 面板里的 Build Events => Post-Build Event 添加:
+
+`XCOPY *.vs ..\Debug /Y & XCOPY *.fs ..\Debug /Y`
+
+在Project编译之后, 会自动执行XCOPY命令, 将后缀为.vs, .fs的文件复制到上级Debug目录.
+
+这样, Debug 目录里的 exe 文件运行的时候, 就可以读取到这些文件.
+
+<br/>
+
+Visual Studio 调试时使用的文件路径, 是Project目录.
+
+
+```lua
+-- 打印累计的帧数
+local totalFrames = cc.Director:getInstance():getTotalFrames()
+print("totalFrames = ", totalFrames)
+```
+
+
+shell / cmd 是使用操作系统的一种方式.
 
 
 ---
