--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -44,6 +44,30 @@ print("totalFrames = ", totalFrames)
 shell / cmd 是使用操作系统的一种方式.
 
 
+C语言 宏 里的 #, #@
+
+```c
+// #@: 转换为字符, 两边加单引号('), 'val'
+#define _C(val) #@val
+
+// #: 转换为字符串, 两边加双引号("), "val"
+#define _S(val) #val
+
+// val 转换为 "val\n". 如果val是宏, 则扩展它.
+#define LN(val) _S(val)"\n"
+
+const char* a1 = LN(stpq);
+printf("a1 len = %lu\n", strlen(a1)); // a1 len = 5
+printf("a1 = %s", a1); // a1 = stpq
+
+char buffer[5] = "";
+buffer[0] = _C(x);
+buffer[1] = _C(y);
+buffer[2] = _C(z);
+buffer[3] = _C(w);
+printf("buffer = %s\n", buffer); // buffer = xyzw
+```
+
 ---
 
 ## 2019.06.02
