trick Nuklear OpenGL

--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,8 +1,37 @@
 
 
+- [2019.06.04](#20190604)
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.04
+
+
+glfw, 如果一直按着空格, 这个判断为真:
+
+```c
+if (glfwGetKey(window, GLFW_KEY_SPACE) == GLFW_PRESS) {
+    // ...
+}
+```
+
+```lua
+-- test cocostudio animation
+-- ActionTimeline derived from cocos2d::Action
+do
+    local path = "csb/xxx.csb";
+    local node = cc.CSLoader:createNode(path);
+    node:addTo(self):move(display.center)
+
+    local actionTimeline = cc.CSLoader:createTimeline(path);
+    --                         (startIndex, loop)
+    actionTimeline:gotoFrameAndPlay(0, true);
+    node:runAction(actionTimeline);
+end
+```
 
 ---
 
