--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,9 +1,26 @@
 
 
+- [2019.06.05](#20190605)
 - [2019.06.04](#20190604)
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.05
+
+使用 `XCOPY` 复制文件前, 确认目录是已经创建的.
+
+```cmd
+SET backupPath=D:\PATH\TO\BACKUP
+SET XCOPYArgs=/Y /I
+MKDIR %backupPath%
+XCOPY main.cpp %backupPath% %XCOPYArgs%
+XCOPY *.vs %backupPath% %XCOPYArgs%
+XCOPY *.fs %backupPath% %XCOPYArgs%
+Pause
+```
 
 ---
 
