--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -93,7 +93,7 @@ shell / cmd 是使用操作系统的一种方式.
 C语言 宏 里的 #, #@
 
 ```c
-// #@: 转换为字符, 两边加单引号('), 'val'
+// #@: 转换为字符, 两边加单引号('), 'val'. Visual Studio 里有效.
 #define _C(val) #@val
 
 // #: 转换为字符串, 两边加双引号("), "val"
