--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,10 +1,29 @@
 
 
+- [2019.06.06](#20190606)
 - [2019.06.05](#20190605)
 - [2019.06.04](#20190604)
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.06
+
+mac 终端展示时间, `+` 需要添加到最前面.
+
+```bash
+date "+DATE: %Y-%m-%d%nTIME: %H:%M:%S"
+
+# 结果:
+# DATE: 2019-06-06
+# TIME: 06:26:42
+
+date "+%Y-%m-%d_%H:%M:%S"
+# 2019-06-06_06:29:38
+```
+
 
 ---
 
