--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -15,15 +15,47 @@ mac 终端展示时间, `+` 需要添加到最前面.
 
 ```bash
 date "+DATE: %Y-%m-%d%nTIME: %H:%M:%S"
-
 # 结果:
 # DATE: 2019-06-06
 # TIME: 06:26:42
 
 date "+%Y-%m-%d_%H:%M:%S"
+# 结果:
 # 2019-06-06_06:29:38
 ```
 
+cmd 显示时间
+
+```cmd
+DATE /T
+REM 结果:
+REM 2019/06/06 周四
+
+TIME /T
+REM 结果:
+REM 10:21
+
+ECHO %date%
+REM 结果:
+REM 2019/06/06 周四
+
+ECHO %time%
+REM 结果:
+REM 10:22:09.29
+
+REM ======================================
+REM %date:~x,y%, 从 x 开始, 截取 y 个元素
+REM ======================================
+
+REM 截取从0开始的4个元素
+ECHO %date:~0,4%
+REM 结果:
+REM 2019
+
+ECHO %date:~0,4%%date:~5,2%%date:~8,2%%time:~0,2%%time:~3,2%%time:~6,2%
+REM 结果:
+REM 20190606102421
+```
 
 ---
 
@@ -34,11 +66,14 @@ date "+%Y-%m-%d_%H:%M:%S"
 ```cmd
 SET backupPath=D:\PATH\TO\BACKUP
 SET XCOPYArgs=/Y /I
+
 MKDIR %backupPath%
+
 XCOPY main.cpp %backupPath% %XCOPYArgs%
 XCOPY *.vs %backupPath% %XCOPYArgs%
 XCOPY *.fs %backupPath% %XCOPYArgs%
-Pause
+
+PAUSE
 ```
 
 ---
@@ -80,7 +115,7 @@ git 遇到问题: fatal: refusing to merge unrelated histories 的解决方案
 git merge master --allow-unrelated-histories
 ```
 
-Linux 的两条命令之间通过分号(;)连接.
+Linux 的两条命令之间通过分号( ; )连接.
 
 Windows 的两条命令之间通过 & 连接.
 
