--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -57,6 +57,68 @@ REM 结果:
 REM 20190606102421
 ```
 
+```c
+struct Color {
+    float r; float g; float b; float a;
+} c;
+
+// 对结构体赋值
+c = { 0.8f, 0.6f, 0.5f, 0.7f };
+```
+
+使用 union:
+
+```c
+struct Vec4 { float x; float y; float z; float w; };
+
+struct Variable {
+    union {
+        int i;
+        double d;
+        char buffer[100];
+        struct Vec4 xyzw;
+        string s;
+    };
+
+    Variable():s("") {}
+    Variable(const Variable& v) { *this = v; }
+    Variable(Variable&& v) { *this = v; }
+    ~Variable() { s.clear(); }
+
+    Variable& operator=(const Variable& v) {
+    	memcpy(this, &v, sizeof(v));
+    	//s = v.s;
+    	return *this;
+    }
+    Variable& operator=(Variable&& v) {
+    	*this = v;
+    	return *this;
+    }
+} ;
+
+struct Variable value;
+
+value.i = 1010;
+cout << "value.i " << value.i << endl;
+
+value.d = 3.1415926;
+cout << "value.d " << value.d << endl;
+
+strcpy(value.buffer, "be good");
+cout << "value.buffer " << value.buffer << endl;
+
+value.xyzw = { 1.1f, 2.2f, 3.3f, 4.5f };
+cout << "value.xyzw " << value.xyzw.x << " " << value.xyzw.y << " " << value.xyzw.z << " " << value.xyzw.w << endl;
+
+value.s = "qwertyuiop";
+cout << "value.s " << value.s.c_str() << endl;
+
+cout << "sizeof value " << sizeof(value) << endl;
+
+```
+
+实现数据驱动前, 需要先定义结构.
+
 ---
 
 ## 2019.06.05
