--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,11 +1,45 @@
 
 
+- [2019.06.07](#20190607)
 - [2019.06.06](#20190606)
 - [2019.06.05](#20190605)
 - [2019.06.04](#20190604)
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.07
+
+用于渲染的底层库(创建窗口系统)
+
+> underlying backend (SDL, GLFW, X11, ...)
+
+发现一个更好的 GUI库, [imgui](https://github.com/ocornut/imgui)
+
+- [cocos2dx + imgui](https://github.com/c0i/imguix)
+
+<br/>
+
+I want to use lua, shader, cocos and imgui. So I need a bundled develop environment:
+
+*Lua + Cocos2dx + ImGUI*
+
+With this environment, I can write lua, c, glsl.
+
+**Need some skill to communicate lua with c/c++.**
+
+<br/>
+
+cocos2dx 的 vs 工程里, 自定义生成步骤(Custom Build Step)的内容:
+
+```cmd
+if not exist "$(LocalDebuggerWorkingDirectory)" mkdir "$(LocalDebuggerWorkingDirectory)"
+xcopy /Y /Q "$(OutDir)*.dll" "$(LocalDebuggerWorkingDirectory)"
+xcopy "$(ProjectDir)..\..\..\res" "$(LocalDebuggerWorkingDirectory)\Resources\res\" /D /E /I /F /Y
+xcopy "$(ProjectDir)..\..\..\src" "$(LocalDebuggerWorkingDirectory)\Resources\src\" /D /E /I /F /Y
+```
 
 ---
 
