--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.08](#20190608)
 - [2019.06.07](#20190607)
 - [2019.06.06](#20190606)
 - [2019.06.05](#20190605)
@@ -7,6 +8,22 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.08
+
+.gitignore文件
+
+```
+# 忽略所有文件
+/*
+
+# 不忽略这个文件, ! 开头
+!readme.md
+```
+
+可以在不同目录下, 创建 .gitignore 文件.
 
 ---
 
