--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -25,6 +25,39 @@
 
 可以在不同目录下, 创建 .gitignore 文件.
 
+<br/>
+
+> YMMV, Your mileage may vary, 见仁见智
+
+FFI library, 使 lua 可以使用 c 语言
+
+<br/>
+
+**std::forward**
+
+```c
+template<typename T, typename... Args>
+void printIt(T t, Args&&... args)
+{
+	printIt(t);
+	printIt(std::forward<Args>(args)...);
+}
+
+template<> void printIt<double>(double t) { std::cout << "double t = " << t << std::endl; }
+template<> void printIt<int>(int t) { std::cout << "int t = " << t << std::endl; }
+template<> void printIt<std::string>(std::string t) { std::cout << "string t = " << t.c_str() << std::endl; }
+
+// 测试
+printIt(100.0, 80, std::string("well done"));
+
+// 结果
+double t = 100
+int t = 80
+string t = well done
+
+```
+
+
 ---
 
 ## 2019.06.07
