--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.09](#20190609)
 - [2019.06.08](#20190608)
 - [2019.06.07](#20190607)
 - [2019.06.06](#20190606)
@@ -11,7 +12,32 @@
 
 ---
 
+## 2019.06.09
+
+
+Xcode Help, 搜索 "Build settings reference", 可以找到 $(SRCROOT), $(PRODUCT_NAME) ... 的定义.
+
+mac app 与 ios app 通过 usb 传输数据的 demo:
+https://github.com/rsms/peertalk
+
+
+需要有自己定义的结构, 如果没有, 但使用了其他框架的结构. 那么, 在更换框架的时候, 就需要重新创建结构并修改使用到这些结构的代码了.
+
+`#include <Fire.h>`, 符号"< >" 会查找指定的头文件目录, 并且如果有多处引用这个头文件, 则只添加一次.
+
+钩子, 伏笔, 插眼, 挖坑, 回调, 生命周期.
+
+---
+
 ## 2019.06.08
+
+TODO:
+
+- [ ] 熟悉 Lua, C 与 Lua 的交互.
+- [ ] 熟悉 C/C++
+- [ ] 熟悉 Cocos2dx
+- [ ] 熟悉 ImGui
+
 
 .gitignore文件
 
@@ -57,6 +83,7 @@ string t = well done
 
 ```
 
+可以参照 makefile 文件, 创建工程文件.
 
 ---
 
