--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.10](#20190610)
 - [2019.06.09](#20190609)
 - [2019.06.08](#20190608)
 - [2019.06.07](#20190607)
@@ -9,6 +10,27 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.10
+
+滑动条(slider)与进度条(progress):
+
+都有取值范围.
+
+滑动条, 可以手动控制滑块, 设置当前值.
+
+进度条, 值是自动向边界变化.
+
+下拉选择(combo), 可以表示单项选择, 只显示选中的选项, 其他选项隐藏.
+
+单选按钮(radio), 也可以表示单项选择项, 所有选项都会显示.
+
+
+<limits.h>: INT_MAX, INT_MIN, ...
+
+构建函数(constructor) 与 初始化函数(initialzation)分离, 这样在其他地方也可以使用初始化函数.
 
 ---
 
