--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.11](#20190611)
 - [2019.06.10](#20190610)
 - [2019.06.09](#20190609)
 - [2019.06.08](#20190608)
@@ -10,6 +11,112 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.11
+
+```
+    代码构建程序.
+    代码由程序员编辑.
+    程序员用编辑器编写代码.
+    编辑器可以保存文本.
+    文本是字符串.
+    程序员编辑的代码是字符串.
+    程序可以由文本构建.
+
+    UI编辑器可以生成UI文件.
+    程序解析UI文件, 可以生成图形界面.
+    UI文件可以是文本, 这种数据格式是可读的.
+    UI编辑器可以生成文本.
+    解析文本的工具叫解析器.
+    UI文件里的数据结构通常是树.
+
+    基本程序结构是顺序, 选择, 循环结构. 还有初始, 输出, 清理阶段.
+    如果可以用图形的方式表示这些结构, 那就可以用图形编辑器生成代码?
+    如果能直接生成可用的代码, 那就比解析配置文件更快了.
+```
+
+动态生成数组, 注意 [ ] 符号:
+
+```c
+    int len = 1000;
+    char* data = new char[len]; // !
+    memset(data, 0, len);
+    delete[] data; // !
+    data = NULL;
+```
+
+C File, write file:
+
+```c
+    string data = "file data";
+    const char* mode = "wb";
+    FILE *fp = fopen("filename.ext", mode);
+    size_t size = data.length();
+    fwrite(data.c_str(), 1, size, fp);
+    fclose(fp);
+```
+
+C File, read file:
+
+```c
+    int len = 1000;
+
+    const char* mode = "rb";
+    FILE *fp = fopen("filename.ext", mode);
+
+    fseek(fp, 0, SEEK_END);
+    len = ftell(fp);
+    len++; // for '\0'
+
+    char* data = new char[len];
+    memset(data, 0, len);
+
+    // get length of content
+    fseek(fp, 0, SEEK_SET);
+    fread(data, 1, len, fp);
+    fclose(fp);
+
+    // ...
+
+    if (data != NULL)
+    {
+        delete[] data;
+        data = NULL;
+    }
+```
+
+`<<`, 输出 文件 终端 流
+
+`>>`, 输入 内存.
+
+C++ File IO, 使用 `ifstream`, `ofstream`, `stringstream`
+
+```c++
+    stringstream ss;
+
+#define PLAY_IFSTREAM
+#define PLAY_OFSTREAM
+
+#ifdef PLAY_OFSTREAM
+    ss << "PLAY_OFSTREAM" << endl;
+    ofstream os;
+    os.open("playfileio.txt");
+    os << ss.rdbuf();
+    os.close();
+    cout << ss.str() << endl;
+#endif
+
+#ifdef PLAY_IFSTREAM
+    ifstream is;
+    is.open("playfileio.txt");
+    ss << is.rdbuf();
+    cout << ss.rdbuf() << endl;
+#endif // PLAY_IFSTREAM
+
+    cout << "\n";
+```
 
 ---
 
