--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -87,9 +87,9 @@ C File, read file:
     }
 ```
 
-`<<`, 输出 文件 终端 流
+`<<`, 输出到 文件 终端 流
 
-`>>`, 输入 内存.
+`>>`, 输入到 内存.
 
 C++ File IO, 使用 `ifstream`, `ofstream`, `stringstream`
 
