--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.12](#20190612)
 - [2019.06.11](#20190611)
 - [2019.06.10](#20190610)
 - [2019.06.09](#20190609)
@@ -11,6 +12,98 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.12
+
+**shader structure:**
+
+```
+version
+
+define out
+
+define in
+
+define uniform
+
+define function
+
+define main function
+
+```
+
+[ANGLE](https://github.com/google/angle), 用于解析 shader, 生成语法树.
+
+[gn](https://gn.googlesource.com/gn/), 生成 .ninja 文件, 用于构建 chromium 项目.
+
+gclient, 用于管理 chromium 项目的源码.
+
+<br />
+
+编译 ANGLE 项目:
+
+执行:
+```
+python scripts/bootstrap.py
+gclient sync
+```
+
+修改 vs_toolchain.py, 设置 vs 的版本:
+```
+CURRENT_DEFAULT_TOOLCHAIN_VERSION = '2019'
+```
+
+之后运行 `gn gen out/Debug --sln=angle-debug --ide=vs2019`, 生成工程文件.
+
+<br />
+编译的时候, 如果遇到 "No module named win32file" 问题. 需要安装 pywin32 模块:
+
+`pip install pywin32`
+
+<br />
+
+ANGLE 目前只能解析OpenGL ES 3.0 及以下, WebGL 2.0及以下的版本. `shader_translator` 例子有解析shader文件的功能.
+
+`#version 300 es`, 在所有shader文件的**第一行**声明使用 OpenGL ES 3.0 版本.
+
+使用 OpenGL ES 3.0, fragment shader 需要指定 float **精度**, 否则会报错:
+
+```c
+#version 300 es
+precision mediump float;
+precision mediump int;
+```
+
+对于 vertex shader 可以指定:
+
+```c
+#version 300 es
+precision highp float;
+precision highp int;
+```
+
+<br />
+
+[OpenGL Version](https://en.wikipedia.org/wiki/OpenGL_Shading_Language)
+
+![OpenGL Version](res/20190612_01.jpg)
+
+
+使用 OpenGL ES 2.0 版本:
+
+```c
+#version 100
+precision mediump float;
+precision mediump int;
+```
+
+git 将最新的修改压缩打包:
+
+```
+git archive -o update.zip HEAD $(git diff --name-only HEAD^)
+```
 
 ---
 
