--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.13](#20190613)
 - [2019.06.12](#20190612)
 - [2019.06.11](#20190611)
 - [2019.06.10](#20190610)
@@ -12,6 +13,24 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.13
+
+查看 dylib 使用到的库:
+
+```
+otool -L /path/to/exe_or_dylib
+```
+
+`install_name_tool`
+
+i386
+
+x86_64
+
+x64
 
 ---
 
