--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -32,6 +32,28 @@ x86_64
 
 x64
 
+<br />
+
+处理 min, max 宏与同名函数冲突的问题:
+
+添加预处理`NOMINMAX`, 可以取消 min/max 宏. [see](http://www.aiuxian.com/article/p-1687454.html)
+
+<br />
+
+VS 报错, [解决方法](https://blog.csdn.net/xiongya8888/article/details/84571420):
+
+>解决error C2760：语法错误: 意外的令牌“标识符”，预期的令牌为“类型说明符”
+
+```
+项目设置:
+C/C++ -> 语言 -> 符合模式，修改为否
+```
+
+<br />
+
+
+仓库, 用于贮存.
+
 ---
 
 ## 2019.06.12
