--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.14](#20190614)
 - [2019.06.13](#20190613)
 - [2019.06.12](#20190612)
 - [2019.06.11](#20190611)
@@ -13,6 +14,21 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+
+---
+
+## 2019.06.14
+
+
+```js
+// v 是存在的判断
+function isValueExist(v) { return v == 0 || v == false || v == "" || v != null; }
+```
+
+![isValueExist](res/20190614_01.jpg)
+
+
 
 ---
 
@@ -49,6 +65,7 @@ C/C++ -> 语言 -> 符合模式，修改为否
 
 
 仓库, 用于贮存.
+
 
 ---
 
