--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -23,6 +23,110 @@
 
 Mac 不支持 OpenGL es 3.0 ?
 
+> Git 有三种状态，你的文件可能处于其中之一：已提交（committed）、已修改（modified）和已暂存（staged）.
+
+git command list:
+
+`git reset HEAD`, 撤销当前暂存区(stage)的所有修改.
+
+`git reset --hard HEAD`, 恢复当前工作区(workspace/work directory)到最近提交的版本, 即撤销所有修改.
+
+`git reset HEAD <file_name>`, 撤销暂存的文件file_name, 文件是从 已暂存 到 已修改 状态.
+
+`git reset --keep HEAD`, 恢复到最近提交的版本, 并保留工作区的修改.
+
+`git reset HEAD~1`, 回退到上一个版本.
+
+合并 commit_id 之后的所有提交:
+```
+git reset --soft <commit_id>
+git commit
+```
+
+`git checkout -- <file_name>`, 撤销工作区中对文件file_name的修改. 在暂存区里的不受影响.
+
+`git log --pretty=format:'%h : %s' --graph`, 显示日志的提交图.
+
+`git log --pretty=format:'%h : %s' --topo-order --graph`, 以拓扑排序的方式显示日志.
+
+`git log --pretty=format:'%h : %s' --topo-order --reverse`, 以拓扑排序, 逆序的方式显示日志.
+
+`git log --pretty=format:'%h : %s' --stat`, 以统计的方式显示日志.
+
+`git branch -v`, 显示分支最近的提交记录.
+
+`git rebase -i HEAD`, 变基操作, 修改提交后的历史.
+
+`git checkout <commit_id>`, 检出指定提交的内容. 检出 commit_id 后再创建分支, 需要执行 `git checkout -b <branch_name>`.
+
+`git tag -a v1.0 -m 'my version 1.0'`, 对当前记录打标签.
+
+`git checkout <tag>`, 检出tag所指向的版本内容.
+
+`git tag`, `git show`, 查看tag.
+
+`git tag -d v1.0`, 删除一个tag.
+
+`git revert HEAD`, 创建一个撤销最近一次提交的提交.
+
+`git status`, 查看暂存区,工作区的状态.
+
+`git gc`, 压缩历史信息.
+
+`git stash`, 储藏工作区.
+
+`git stash list`, 查看储藏.
+
+`git stash apply`, 应用储藏.
+
+`git stash drop`, 删除储藏.
+
+<br />
+
+`gcc main.c -o main`, 使用gcc生成可执行的main.
+
+一个 build.ninja 的例子:
+
+```
+cflags = -Wall
+
+rule cc
+  command = gcc $cflags -c $in -o $out
+
+rule lnk
+  command = gcc $in -o $out
+
+build main.o: cc main.c
+build main.exe: lnk main.o
+```
+
+Cocos2dx RenderTexture 需要使用 RGBA8888 格式保存图片.
+
+```lua
+
+-- create render texture
+local renderTexture = cc.RenderTexture:create(display.width, display.height, cc.TEXTURE2_D_PIXEL_FORMAT_RGB_A8888)
+renderTexture:setPosition(cc.p(0, -100000)) -- render texture would not display
+parent:addChild(renderTexture)
+
+function captureNode(renderTexture, node, fileBasename, isRGBA)
+    if renderTexture ~= nil and node ~= nil and fileBasename ~= nil and isRGBA ~= nil then
+        renderTexture:begin()
+        do
+            node:visit()
+        end
+        renderTexture:endToLua()
+
+        local fileName = fileBasename..(isRGBA and ".png" or ".jpg")
+        renderTexture:saveToFile(fileName, (isRGBA and cc.IMAGE_FORMAT_PNG or cc.IMAGE_FORMAT_JPEG), isRGBA)
+        setTimeout(function() renderTexture:clear(0,0,0,0) end, 0.1) -- delay clear
+    end
+end
+
+-- usage:
+captureNode(renderTexture, scene, "scene-"..tostring(os.time()), false)
+
+```
 
 ---
 
