--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -103,14 +103,17 @@ build main.exe: lnk main.o
 Cocos2dx RenderTexture 需要使用 RGBA8888 格式保存图片.
 
 ```lua
-
 -- create render texture
-local renderTexture = cc.RenderTexture:create(display.width, display.height, cc.TEXTURE2_D_PIXEL_FORMAT_RGB_A8888)
+local s = cc.Director:getInstance():getOpenGLView():getFrameSize()
+local retinaFactor = cc.Director:getInstance():getOpenGLView():getRetinaFactor()
+local frameZoomFactor = cc.Director:getInstance():getOpenGLView():getFrameZoomFactor()
+local renderTexture = cc.RenderTexture:create(s.width * frameZoomFactor * retinaFactor, s.height * frameZoomFactor * retinaFactor, cc.TEXTURE2_D_PIXEL_FORMAT_RGB_A8888)
 renderTexture:setPosition(cc.p(0, -100000)) -- render texture would not display
 parent:addChild(renderTexture)
 
 function captureNode(renderTexture, node, fileBasename, isRGBA)
     if renderTexture ~= nil and node ~= nil and fileBasename ~= nil and isRGBA ~= nil then
+        renderTexture:setKeepMatrix(true)
         renderTexture:begin()
         do
             node:visit()
@@ -126,6 +129,14 @@ end
 -- usage:
 captureNode(renderTexture, scene, "scene-"..tostring(os.time()), false)
 
+```
+
+cc.utils 提供了截屏功能:
+
+```lua
+cc.utils:captureScreen(function(succeed, name)
+    print("captureScreen callback ", succeed, name)
+end, "scene-"..tostring(os.time())..".jpg")
 ```
 
 ---
