--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.17](#20190617)
 - [2019.06.15](#20190615)
 - [2019.06.14](#20190614)
 - [2019.06.13](#20190613)
@@ -15,6 +16,43 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.17
+
+粒子的区域大小怎么计算?
+
+
+粒子的起始位置, 在粒子文件中的定义:
+
+```plist
+<key>sourcePositionx</key>
+<real>160</real>
+<key>sourcePositiony</key>
+<real>210</real>
+```
+
+Cocos2dx 裁剪:
+
+```lua
+local clipper = cc.ClippingNode:create()
+
+-- stencil
+local stencilSprite = display.newSprite("alphamap.png", display.center.x, display.center.y)
+clipper:setStencil(stencilSprite)
+
+clipper:addChild(contentLayer) -- add content to clipping node
+layer:addChild(clipper) -- add clipping node to scene
+
+
+-- 相反裁剪
+local isInvert = false -- or true
+clipper:setInverted(isInvert)
+
+-- 模板透明度的阈值 alphaThreshold: [0, 1]
+clipper:setAlphaThreshold(alphaThreshold)
+```
 
 
 ---
