--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.18](#20190618)
 - [2019.06.17](#20190617)
 - [2019.06.15](#20190615)
 - [2019.06.14](#20190614)
@@ -16,6 +17,35 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.18
+
+=====================================================
+
+[protobuf](https://developers.google.com/protocol-buffers/docs/cpptutorial)
+
+执行 `protoc -I=$SRC_DIR --cpp_out=$DST_DIR $SRC_DIR/addressbook.proto`
+
+生成 `addressbook.pb.h`, `addressbook.pb.cc`
+
+
+`extract_includes.bat`, 可以抽取出protobuf的头文件.
+
+=====================================================
+
+
+`npm list -g`, 列出 npm 全局安装的模块
+
+```
+npm config set prefix "D:\Software\nodejs\node_global"
+npm config set cache "D:\Software\nodejs\node_cache"
+```
+
+`NODE_PATH`
+
+
 
 ---
 
