--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -43,8 +43,11 @@ npm config set prefix "D:\Software\nodejs\node_global"
 npm config set cache "D:\Software\nodejs\node_cache"
 ```
 
-`NODE_PATH`
+全局变量 `NODE_PATH` 设置为 "D:\Software\nodejs\node_global"
 
+导出 js, `protoc --js_out=import_style=commonjs,binary:out addressbook.proto`
+
+`npm install google-protobuf`
 
 
 ---
