--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.19](#20190619)
 - [2019.06.18](#20190618)
 - [2019.06.17](#20190617)
 - [2019.06.15](#20190615)
@@ -17,6 +18,30 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.19
+
+使用 Node.js 的 Buffer
+
+```js
+// 创建 Buffer, 5 个字节
+var bin = new Buffer([0x68, 0x65, 0x6c, 0x6c, 0x6f])
+
+// 字节数
+console.log(bin.byteLength)
+
+// Buffer 转换为 字符串
+console.log(bin.toString("utf-8"))
+
+// 导出 JSON
+bin.toJSON()
+
+// 使用字符串创建 Buffer
+var bin2 = new Buffer("hello", "utf-8")
+```
+
 
 ---
 
