--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.20](#20190620)
 - [2019.06.19](#20190619)
 - [2019.06.18](#20190618)
 - [2019.06.17](#20190617)
@@ -18,6 +19,25 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.20
+
+UTF-8, GB2312
+
+[DebugView++](https://github.com/CobaltFusion/DebugViewPP), 类似于 DebugView 的日志工具.
+
+WinDbg, 也有日志功能.
+
+
+使用 JavaScript 的 Set 类型, 清除数组里的重复数据:
+
+```js
+var set1 = new Set([7503, 7513, 7504, 7504, 7504])
+for (let item of set1) console.log(item)
+```
+
 
 ---
 
