--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -38,6 +38,12 @@ var set1 = new Set([7503, 7513, 7504, 7504, 7504])
 for (let item of set1) console.log(item)
 ```
 
+重新发现 Android 设备:
+
+```
+adb kill-server
+adb start-server
+```
 
 ---
 
