--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.22](#20190622)
 - [2019.06.21](#20190621)
 - [2019.06.20](#20190620)
 - [2019.06.19](#20190619)
@@ -20,6 +21,13 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.22
+
+vscode 里面的 luaPanda 插件可以调试单个 lua 文件.
+
 
 ---
 
