--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.23](#20190623)
 - [2019.06.22](#20190622)
 - [2019.06.21](#20190621)
 - [2019.06.20](#20190620)
@@ -21,6 +22,28 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.23
+
+安装 flutter iOS 环境出现问题:
+
+`Requested 'libusbmuxd >= 1.1.0' but version of libusbmuxd is 1.0.10`
+
+重新安装 libusbmuxd :
+
+```
+brew unlink usbmuxd
+brew install --HEAD usbmuxd
+```
+
+`flutter run -v -d Fire`
+
+iOS 真机上无法 热重载, 开始调试就会出现:
+
+`Lost connection to device`
+
 
 ---
 
