--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -44,6 +44,84 @@ iOS 真机上无法 热重载, 开始调试就会出现:
 
 `Lost connection to device`
 
+<br />
+
+adb 安装 apk 到手机:
+
+```
+adb install -r fire001-debug.apk
+```
+
+生成 apk 签名:
+
+```
+keytool -genkey -alias android.keystore -keyalg RSA -validity 20000 -keystore android.keystore
+```
+
+查看签名信息:
+
+```
+keytool -list -keystore ./key/1/android.keystore
+```
+
+gradle.properties 关于 apk 签名的设置:
+
+```
+RELEASE_STORE_FILE=/Users/fire/Documents/key/1/android.keystore
+RELEASE_STORE_PASSWORD=fire123
+RELEASE_KEY_PASSWORD=fire123
+RELEASE_KEY_ALIAS=android.keystore
+```
+
+使用 aapt 查看包名, aapt 在 android sdk 的 build-tools 目录下:
+
+```
+aapt dump badging xxx.apk
+
+aapt dump badging xxx.apk | grep package
+```
+
+cocos 打包 apk 命令:
+
+```
+cocos compile -s fire001 -o ./out -p android -m release -j 4
+```
+
+修改 app/build.gradle 里面的 applicationId, 可以修改包名
+
+在 Android Studio 目录下, 执行 `./gradlew assembleRelease`, 打包所有风格的 release 版本, 产出目录是 `app/build/outputs/apk`
+
+在 app/build.gradle 里添加不同的包名:
+
+```
+import org.gradle.internal.os.OperatingSystem;
+
+apply plugin: 'com.android.application'
+
+android {
+    //...
+
+    defaultConfig {
+        // ...
+    }
+
+    flavorDimensions "version"
+    productFlavors {
+        dev {
+            applicationId "fire.dev"
+            dimension "version"
+        }
+
+        v2 {
+            applicationId "fire.v2"
+            dimension "version"
+        }
+    }
+}
+```
+
+gradle 执行清理, `./gradlew clean`
+
 
 ---
 
