--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.24](#20190624)
 - [2019.06.23](#20190623)
 - [2019.06.22](#20190622)
 - [2019.06.21](#20190621)
@@ -22,6 +23,30 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.24
+
+使用 cocostudio v1.6 动画:
+
+```lua
+local armatureName = "armatureName"
+local armaturePath = "path/to/armatureName.ExportJson"
+ccs.ArmatureDataManager:getInstance():addArmatureFileInfo(armaturePath)
+
+local ccsArmature = ccs.Armature:create()
+ccsArmature:init(armatureName)
+ccsArmature:getAnimation():playWithIndex(0)
+```
+
+动画API:
+
+`https://jikan.moe/`
+
+宠物小精灵API:
+
+`https://pokeapi.co/`
 
 ---
 
