--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.25](#20190625)
 - [2019.06.24](#20190624)
 - [2019.06.23](#20190623)
 - [2019.06.22](#20190622)
@@ -23,6 +24,39 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.25
+
+打包 apk, 不重新编译 .so 文件的步骤:
+
+1. 将编译好的 libcocos2dlua.so 放到 libs/armeabi-v7a 目录.
+2. 注释掉 build.gradle 的 externalNativeBuild 部分.
+
+cocos2dx 的so文件, 可以使用未修改过的 build.gradle 配置运行 `./gradlew assembleRelease` 得到.
+
+.so 文件所在目录是 `../../../../build/intermediates/cmake/release/obj/armeabi-v7a/libcocos2dlua.so`
+
+
+项目里的 libs 目录名与 jniLibs.srcDir 的值相同:
+
+```
+sourceSets.main {
+    java.srcDir "src"
+    res.srcDir "res"
+    jniLibs.srcDir "libs"
+    manifest.srcFile "AndroidManifest.xml"
+ }
+```
+
+```
+adb shell                        shell 连接以便使用 pm 命令
+pm list packages                 列出所有包
+pm list packages -f              查看包的位置
+pm list packages -f | grep fire  查看某个关键字的包
+```
+
 
 ---
 
