--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -57,6 +57,23 @@ pm list packages -f              查看包的位置
 pm list packages -f | grep fire  查看某个关键字的包
 ```
 
+`GRADLE_USER_HOME`
+
+一个简单的 build.gradle :
+
+```groovy
+task hello {
+    doLast {
+        println 'hello gradle'
+    }
+}
+```
+
+`./0123456789` 对应的 ASCII 码范围是
+
+`46 47 48 49 50 51 52 53 54 55 56 57`
+
+
 
 ---
 
