--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.26](#20190626)
 - [2019.06.25](#20190625)
 - [2019.06.24](#20190624)
 - [2019.06.23](#20190623)
@@ -24,6 +25,29 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.26
+
+对于 Cocostudio 制作的帧动画(ActionTimeline), 如果 **要回到第一个关键帧**, 需要将 最后一个关键帧与它的前一帧的间隔 跟前面的间隔 不一样.
+
+如: 第1关键帧与第2关键帧, 第2关键帧与第3关键帧 都是间隔 5 帧, 假设最后一帧是第4关键帧, 那么第4关键帧与第5关键帧的间隔应该不等于 5.
+
+![cocostudio ActionTimeLine](res/20190626_01.jpg)
+
+
+```
+superValue.anyProperty 都 不返回空 或者 返回默认值. 用 lua 怎么实现?
+```
+
+`metatable.__index`, 在当前table没有属性key时, 会去访问 __index.
+
+`metatable.__newindex`, 修改`table[key]`时, 会访问 __newindex.
+
+
+"资源, 数据共享"
+
 
 ---
 
