--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.27](#20190627)
 - [2019.06.26](#20190626)
 - [2019.06.25](#20190625)
 - [2019.06.24](#20190624)
@@ -25,6 +26,63 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.27
+
+- Armature
+  - ArmatureAnimation, Armature.getAnimation()
+    - AnimationData, ArmatureAnimation.getAnimationData()
+        - MovementData
+
+```cpp
+class  CC_STUDIO_DLL ArmatureAnimation : public ProcessBase
+```
+
+
+衔接多个 cocostudio v1.6 动画:
+
+```lua
+
+-- playAnimationList({"run", "jump", "run"})
+function XXX:playAnimationList(nameList)
+    local armatureAnimation = self._ccsArmature:getAnimation()
+    local movementNames = nameList -- animation name list
+    local durationTo = 1
+    local loop = false
+    armatureAnimation:playWithNames(movementNames, durationTo, loop)
+
+    -- local animationData = armatureAnimation:getAnimationData()
+    -- local movementData = animationData:getMovement(name)
+    -- print("movementData.duration = ", movementData.duration)
+
+    local timer
+    local function run()
+        local movementID = armatureAnimation:getCurrentMovementID()
+
+        -- 当 MovementID 是 "" 的时候, 表示 nameList 里的动画已经结束.
+        local isMovementOver = (movementID == "")
+        if isMovementOver then
+            armatureAnimation:play("idle") -- 播放待机状态的动画
+
+            self:clearTimer()
+            timer = nil
+        end
+    end
+
+    --                                                                      second
+    timer = cc.Director:getInstance():getScheduler():scheduleScriptFunc(run, 0.05, false)
+    self._timer = timer
+end
+
+function XXX:clearTimer()
+    if self._timer ~= nil then
+        cc.Director:getInstance():getScheduler():unscheduleScriptEntry(self._timer)
+        self._timer = nil
+    end
+end
+```
 
 ---
 
