--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.28](#20190628)
 - [2019.06.27](#20190627)
 - [2019.06.26](#20190626)
 - [2019.06.25](#20190625)
@@ -26,6 +27,54 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.28
+
+单个纹理 与 合图:
+
+```
+ccui.TextureResType.localType
+ccui.TextureResType.plistType
+```
+
+使用 SpriteBatchNode:
+
+```lua
+local pngPath = "xxx.png"
+local plistPath = "xxx.plist"
+local spriteFrameName = "path/spriteframename.png"
+
+-- 加载合图
+cc.SpriteFrameCache:getInstance():addSpriteFrames(plistPath)
+
+-- 创建 SpriteBatchNode, 添加到场景
+local spritebatch = cc.SpriteBatchNode:create(pngPath)
+parent:addChild(spritebatch)
+
+-- 使用 SpriteFrame 创建 Sprite, 添加到 SpriteBatchNode
+local sprite = display.newSprite("#"..spriteFrameName)
+sprite:addTo(spritebatch)
+
+```
+
+
+cocostudio v1.6 动画, 监听播放的状态:
+
+```lua
+ccs.MovementEventType = {
+    start = 0,
+    complete = 1,
+    loopComplete = 2,
+}
+
+--                                                       ccs.MovementEventType
+--                                                                 ||
+armatureAnimation:setMovementEventCallFunc(function(armature, movementType, movementID)
+    print("onMovementCallback ", movementType, movementID)
+end)
+```
 
 ---
 
