--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1,5 +1,6 @@
 
 
+- [2019.06.29](#20190629)
 - [2019.06.28](#20190628)
 - [2019.06.27](#20190627)
 - [2019.06.26](#20190626)
@@ -27,6 +28,56 @@
 - [2019.06.03](#20190603)
 - [2019.06.02](#20190602)
 - [2019.06.01](#20190601)
+
+---
+
+## 2019.06.29
+
+draft log => themeA, themeB, themeC, ...
+
+print 打印出文件名:
+
+```lua
+local ___print_ = print
+print = function(...)
+    local info = debug.getinfo(2)
+    local filepath = string.match(info.short_src, "\"(.*)\"")
+    local t = {filepath, ":", info.currentline, "|"}
+    if info.name then
+        table.insert(t, info.name)
+        table.insert(t, "|")
+    end
+    ___print_(table.concat(t), ...)
+end
+
+```
+
+lua 垃圾回收设置:
+
+```lua
+
+collectgarbage("collect")
+-- avoid memory leak
+collectgarbage("setpause", 100)
+collectgarbage("setstepmul", 5000)
+
+```
+
+lua 内存使用量:
+
+```lua
+collectgarbage("collect")
+print(collectgarbage("count") .. "KB")
+```
+
+EventTouchListener(触摸事件) 的响应与Node的尺寸无关, 从最顶层的Node开始响应, 如果有ChildNode, 则从ChildNode开始响应.
+
+
+服务端返回 ETag, 如果客户端把 If-None-Match 请求头的值使用ETag的值, 服务端将返回304, 在资源没有更新的情况下.
+
+如果资源更新了, 服务端返回200.
+
+
 
 ---
 
