--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,9 +1,25 @@
 
+- [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
 
 ---
 
+## 2019.07.02
 
+`lock_guard`, 可以自解锁(unlock).
+
+```cpp
+#include <mutex>
+
+std::mutex m;
+int common_value = 0;
+
+void func()
+{
+    std::lock_guard<std::mutex> lockGuard(m);
+    common_value = rand();
+}
+```
 
 ---
 
