--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,6 +1,17 @@
 
+- [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.03
+
+导入 `help.py` 里面的所有函数
+
+```python
+from helper import *
+```
 
 ---
 
