--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,7 +1,58 @@
 
+- [2019.07.04](#20190704)
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.04
+
+```python
+print range(5) # [0, 1, 2, 3, 4]
+```
+
+```
+1e-1 = 0.1
+1e-2 = 0.01
+1e-3 = 0.001
+```
+
+计算积分:
+
+```python
+import scipy.integrate
+def f(x,a,b):
+    return ax+b;
+
+result = scipy.integrate.quad(f,minX,maxX,args=(a_value,b_value))
+```
+
+绑定函数变量:
+
+```python
+from functools import partial
+
+def f(x, a, b):
+    return a*x+b
+
+print f(1, 2, 2) # 2
+f22 = partial(f,a=2,b=2)
+print f22(1) # 2
+```
+
+
+- PyTorch深度学习：60分钟入门(Translation), https://zhuanlan.zhihu.com/p/25572330
+- 莫烦PYTHON, 动态神经网络, https://morvanzhou.github.io/tutorials/machine-learning/torch/
+- PyTorch中文网, https://www.pytorchtutorial.com/pytorch-tutorials-list/
+
+`autograd 包`, 自动求导; `autograd.Variable`
+
+`torch.nn 包`
+
+`CIFAR10` 数据集
+
+
 
 ---
 
