--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,8 +1,22 @@
 
+- [2019.07.05](#20190705)
 - [2019.07.04](#20190704)
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.05
+
+循环神经网络/递归神经网络, (RNN, Recurrent Neural Networks)
+
+
+判断table是否为空:
+
+```lua
+next(t) == nil
+```
 
 ---
 
