--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,9 +1,22 @@
 
+- [2019.07.06](#20190706)
 - [2019.07.05](#20190705)
 - [2019.07.04](#20190704)
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.06
+
+开发游戏, 游戏美术资源, 游戏音乐, 游戏数值, 分配给不同的人完成.
+
+获取 cocostudio Button 里的 Sprite :
+
+```lua
+button:getVirtualRenderer():getSprite()
+```
 
 ---
 
