--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,10 +1,29 @@
 
+- [2019.07.08](#20190708)
 - [2019.07.06](#20190706)
 - [2019.07.05](#20190705)
 - [2019.07.04](#20190704)
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.08
+
+使用 [GIMP 2](https://www.gimp.org/) 的橡皮擦擦除背景.
+
+Poker:
+
+```
+A♦,2♦,3♦,4♦,5♦,6♦,7♦,8♦,9♦,10♦,J♦,Q♦,K♦,
+A♣,2♣,3♣,4♣,5♣,6♣,7♣,8♣,9♣,10♣,J♣,Q♣,K♣,
+A♥,2♥,3♥,4♥,5♥,6♥,7♥,8♥,9♥,10♥,J♥,Q♥,K♥,
+A♠,2♠,3♠,4♠,5♠,6♠,7♠,8♠,9♠,10♠,J♠,Q♠,K♠,
+1🃏,2🃏
+```
+
+
 
 ---
 
