--- a/trick/note-2019.06.md
+++ b/trick/note-2019.06.md
@@ -1226,6 +1226,8 @@ if (glfwGetKey(window, GLFW_KEY_SPACE) == GLFW_PRESS) {
 }
 ```
 
+cocostudio v2.0 动画:
+
 ```lua
 -- test cocostudio animation
 -- ActionTimeline derived from cocos2d::Action
