--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.10](#20190710)
 - [2019.07.08](#20190708)
 - [2019.07.06](#20190706)
 - [2019.07.05](#20190705)
@@ -6,6 +7,52 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.10
+
+获取 cocostudio v2.0 动画信息, "up" 是动画名字:
+
+```lua
+dump(actionTimeline:getAnimationInfo("up"))
+
+"<var>" = {
+    "endIndex"   = 110
+    "name"       = "up"
+    "startIndex" = 100
+}
+```
+
+![cocostudio v2.0 动画](res/20190710_01.jpg)
+
+cocostudio v2.0 动画结束后, `actionTimeline:getCurrentFrame()` 不一定等于 `actionTimeline:getEndFrame()`
+
+
+cocostudio button:
+```lua
+ccui.Button:create():addTo(parent):move(500, 100):setTitleText("play"):setTitleFontSize(30):addClickEventListener(function()
+		print("_play_")
+	end)
+```
+
+GAN (Generative Adversarial Nets 生成对抗网络)
+
+Generator, 生成器
+
+Discriminator, 鉴别器
+
+> Generator 会根据随机数来生成有意义的数据 , Discriminator 会学习如何判断哪些是真实数据 , 哪些是生成数据, 然后将学习的经验反向传递给 Generator, 让 Generator 能根据随机数生成更像真实数据的数据.
+
+GAN 应用, https://www.jianshu.com/p/08da013ca1cb
+
+DCGAN-tensorflow, https://github.com/carpedm20/DCGAN-tensorflow
+
+GAN学习指南：从原理入门到制作生成Demo, https://blog.csdn.net/heyc861221/article/details/80127914
+
+pix2pix, https://github.com/phillipi/pix2pix
+
+
 
 ---
 
