--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.11](#20190711)
 - [2019.07.10](#20190710)
 - [2019.07.08](#20190708)
 - [2019.07.06](#20190706)
@@ -7,6 +8,29 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.11
+
+更新 python 包
+
+`pip install --upgrade setuptools`
+
+论文, https://arxiv.org/
+
+> LuaRocks is the package manager for Lua modules.
+
+LuaRocks, lua 包管理, https://luarocks.org/
+
+
+使用 DCGAN-tensorflow:
+
+```
+python main.py --dataset=to_train --input_fname_pattern="*.png" --train --batch_size=4 --input_width=86 --input_height=85 --output_width=86 --output_height=85 --epoch=300
+```
+
+
 
 ---
 
