--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.13](#20190713)
 - [2019.07.12](#20190712)
 - [2019.07.11](#20190711)
 - [2019.07.10](#20190710)
@@ -9,6 +10,20 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+
+---
+
+## 2019.07.13
+
+```
+Cocos2dx Action:
+
+Sequence(DelayTime, CallFunc)
+
+DelayTime 的 _elapsed 属性不会变化, 变化的是 Sequence 的_elapsed .
+```
+
 
 ---
 
