--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.15](#20190715)
 - [2019.07.13](#20190713)
 - [2019.07.12](#20190712)
 - [2019.07.11](#20190711)
@@ -10,6 +11,25 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+
+---
+
+## 2019.07.15
+
+- [ ] 使用 cocostudio v1.6 动画
+- [x] 整理 cocos 工具模块
+
+cocostudio v2.0 导出的资源, 都通过 `cc.CSLoader:createNode(path)` 加载.
+
+EOL, 产品寿命结束（英语：End-of-life，缩写EOL）
+
+下载网页内容的网站, http://file2hd.com/
+
+伯爵夫人城堡接龙, http://www.7k7k.com/swf/119467.htm
+
+王子梦游扑克王国, http://www.7k7k.com/swf/81064.htm
+
 
 
 ---
