--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.16](#20190716)
 - [2019.07.15](#20190715)
 - [2019.07.13](#20190713)
 - [2019.07.12](#20190712)
@@ -12,6 +13,34 @@
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
 
+---
+
+## 2019.07.16
+
+```lua
+-- 命名参数:
+
+function f(x,y)
+  print(x,y)
+end
+
+function f_(param)
+  f(param.x,param.y)
+end
+
+f({x=1,y=2})
+f {x=1,y=2}
+
+f_({x=1,y=2})
+f_{x=1,y=2} -- 可以忽略括号
+
+--[[
+table: 00e85668	nil
+table: 00e858e8	nil
+1	2
+1	2
+]]
+```
 
 ---
 
