--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.18](#20190718)
 - [2019.07.16](#20190716)
 - [2019.07.15](#20190715)
 - [2019.07.13](#20190713)
@@ -12,6 +13,20 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.18
+
+```python
+import shutil
+
+# 复制文件
+shutil.copy2('/src/file.ext', '/dst/dir')
+
+# 复制目录
+shutil.copytree(src, dst)
+```
 
 ---
 
