--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.20](#20190720)
 - [2019.07.18](#20190718)
 - [2019.07.16](#20190716)
 - [2019.07.15](#20190715)
@@ -13,6 +14,36 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.20
+
+python 远程连接需要安装:
+
+```
+pip install paramiko
+pip install scp
+```
+
+https://github.com/paramiko/paramiko
+
+使用 python 复制到远程目录:
+
+```python
+
+from paramiko import SSHClient
+from scp import SCPClient
+
+def copyToRemote(src, dst):
+	ssh = SSHClient()
+	ssh.load_system_host_keys()
+	ssh.connect(hostname="remote_host_name", port=22, username="user_name", password="password_text")
+
+	with SCPClient(ssh.get_transport()) as scp:
+	  scp.put(src, dst, recursive=True)
+
+```
 
 ---
 
