--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.21](#20190721)
 - [2019.07.20](#20190720)
 - [2019.07.18](#20190718)
 - [2019.07.16](#20190716)
@@ -14,6 +15,30 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.21
+
+ python 打印文件名, 函数名, 行号 的 print 函数
+
+```python
+def _print(*content):
+    depth = 1
+    file_name = sys._getframe(depth).f_code.co_filename  # 文件名
+    function_name = sys._getframe(depth).f_code.co_name  # 函数名
+    file_line = sys._getframe(depth).f_lineno  # 行号
+    print(file_name, function_name, file_line, content)
+
+```
+
+python 逆序:
+
+```python
+a[::-1]
+```
+
+
 
 ---
 
