--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.22](#20190722)
 - [2019.07.21](#20190721)
 - [2019.07.20](#20190720)
 - [2019.07.18](#20190718)
@@ -15,6 +16,18 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.22
+
+x raised to the power of y
+
+x 的 y 次方
+
+正态分布的概率累积分布函数 与 sigmoid 函数的图像相似.
+
+
 
 ---
 
