--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.23](#20190723)
 - [2019.07.22](#20190722)
 - [2019.07.21](#20190721)
 - [2019.07.20](#20190720)
@@ -16,6 +17,13 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.23
+
+`[ (input, label) ]`, 数据集的结构. 列表内的元素是数据与标签值的对应关系.
+
 
 ---
 
