--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.24](#20190724)
 - [2019.07.23](#20190723)
 - [2019.07.22](#20190722)
 - [2019.07.21](#20190721)
@@ -20,10 +21,31 @@
 
 ---
 
+## 2019.07.24
+
+更换资源的方法:
+
+- 发现已有资源与控件的对应关系
+- 更换新资源
+- 发布到本地(记作 A)
+- 复制 `已发布的, 最少冗余的资源` 到 目标路径(记作 B)
+- 对比 A, B 路径的资源, 找出需要的新资源
+- 将 A 路径的新版资源 覆盖到 B 路径
+- 测试新资源
+
+---
+
 ## 2019.07.23
 
 `[ (input, label) ]`, 数据集的结构. 列表内的元素是数据与标签值的对应关系.
 
+二维列表 扁平化 + 绝对值:
+
+```python
+    list_1 = [[1, -1, 2, 3], [0, 0, 9, 3], [-1, -1, -1, 6]]
+    list_2 = [x if x > 0 else -x for xs in list_1 for x in xs]
+    print(list_2)  # [1, 1, 2, 3, 0, 0, 9, 3, 1, 1, 1, 6]
+```
 
 ---
 
