--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.25](#20190725)
 - [2019.07.24](#20190724)
 - [2019.07.23](#20190723)
 - [2019.07.22](#20190722)
@@ -18,6 +19,40 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.25
+
+python 函数传参:
+
+```python
+def f(a="default_a", b="b", c="c"):
+    print(a,b,c)
+
+f(b=100, c=90)
+```
+
+python "计数君":
+
+```python
+from collections import Counter
+
+c = Counter([1,2,3,4,4,4,4,3])
+print(c)
+print(c.most_common(2))  # 最多的两个
+print(Counter(['red', 'blue', 'red', 'green', 'blue', 'blue']))
+
+# 结果:
+# Counter({4: 4, 3: 2, 1: 1, 2: 1})
+# [(4, 4), (3, 2)]
+# Counter({'blue': 3, 'red': 2, 'green': 1})
+```
+
+knn, k最近邻分类（nearset neighbors classification）, 判断元素与k个目标分类的距离, 选择这些距离中的最小值, 这个值对应的目标则是这个元素的分类.
+
+
+`Stand-alone game`, 单机游戏
 
 ---
 
