--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.26](#20190726)
 - [2019.07.25](#20190725)
 - [2019.07.24](#20190724)
 - [2019.07.23](#20190723)
@@ -19,6 +20,13 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.26
+
+Synergy 同一套键鼠控制 win 和 mac.
+
 
 ---
 
