--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.29](#20190729)
 - [2019.07.26](#20190726)
 - [2019.07.25](#20190725)
 - [2019.07.24](#20190724)
@@ -20,6 +21,13 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.29
+
+CS的数学基础, https://www.cis.upenn.edu/~jean/gbooks/geomath.html
+
 
 ---
 
