--- a/trick/note-2019.07.md
+++ b/trick/note-2019.07.md
@@ -1,4 +1,5 @@
 
+- [2019.07.31](#20190731)
 - [2019.07.29](#20190729)
 - [2019.07.26](#20190726)
 - [2019.07.25](#20190725)
@@ -21,6 +22,13 @@
 - [2019.07.03](#20190703)
 - [2019.07.02](#20190702)
 - [2019.07.01](#20190701)
+
+---
+
+## 2019.07.31
+
+工作流常用操作: 拷贝, 移动, 重命名, 新建目录, 遍历目录, 转换图片格式, 调整图片大小, 生成配置文件, 替换文本等.
+
 
 ---
 
