--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,5 +1,17 @@
 
+- [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+
+---
+
+## 2019.08.02
+
+python gui:
+
+- wxPython, https://www.wxpython.org/
+
+
 
 ---
 
